# strix

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
strix-cli/: Cargo.toml
strix-cli/src/: main.rs
strix-eval/: Cargo.toml
strix-eval/src/: eval.rs  lib.rs  state.rs
