[package]
name = "strix"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["strix-eval"]

[dependencies]
anyhow = "1.0.98"
chess = "3.2.0"
clap = { version = "4.5.40", features = ["derive"] }
owo-colors = "4.2.1"
strix-eval = { path = "strix-eval" }

[[bin]]
name = "strix"
path = "src/main.rs"
